# memwatch

./: .gitignore  CMakeLists.txt  INSTALL  LICENSE  Makefile.am  Makefile.in  NEWS  README.md  a.out  bitbucket-pipelines.yml  configure  configure.ac  contributors.txt  memwatch-0.0.1.ebuild  memwatch.1  memwatch.c  memwatch.h
ebuilds/: memwatch-0.0.2.ebuild  memwatch-0.1.0.ebuild
src/: CMakeLists.txt  common.c  common.h  draw.c  draw.h  main.c  mem_fields.c  mem_fields.gperf  mem_fields.h  memory_info.c  memory_info.h  memwatch.h  options.c  options.h  process_info.c  process_info.h  vector.c  vector.h
